# play-cmake

./: .gitignore  CMakeLists.txt
A-hello-cmake/: CMakeLists.txt
B-hello-headers/: CMakeLists.txt
B-hello-headers/src/: main.cpp
C-static-library/: CMakeLists.txt
D-share-library/: CMakeLists.txt
D-share-library/src/: Hello.cpp  main.cpp
H-third-party-library/: CMakeLists.txt
I-compiling-with-clang/: CMakeLists.txt  pretest.sh  run_ninja.sh  runtest.sh
I-compiling-with-clang/build.clang/: CMakeCache.txt  Makefile  cmake_install.cmake
I-compiling-with-clang/build.ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
src/: CMakeLists.txt
src/hello/: hello.c
src/world/: CmakeLists.txt  world.h
testA/src/: CMakeLists.txt  CMakeLists_.txt  main.c
testA/src/hello/: CMakeLists.txt  hello.h
testA/src/world/: world.c
